--- a/task1.ipynb
+++ b/task1.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "aa8cf369",
    "metadata": {},
    "outputs": [
@@ -135,6 +135,27 @@
     "pipeline_filename_writer.write(str(accuracy).encode())\n",
     "\n",
     "#e\n",
+    "def classPercentage(classIndex):\n",
+    "    return len([number for number in classes if number == classIndex])\n",
+    "\n",
+    "pipeline_filename_writer.write('\\n(e)\\n'.encode())\n",
+    "pipeline_filename_writer.write('\\nBusiness words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(0)).encode())\n",
+    "pipeline_filename_writer.write('\\nEntertainment words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(1)).encode())\n",
+    "pipeline_filename_writer.write('\\nPolitics words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(2)).encode())\n",
+    "pipeline_filename_writer.write('\\nSports words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(3)).encode())\n",
+    "pipeline_filename_writer.write('\\nTech words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(4)).encode())\n",
+    "\n",
+    "#f vocabular size\n",
+    "number_of_words = len(vectorizer.get_feature_names())\n",
+    "pipeline_filename_writer.write('\\n(f)\\n'.encode())\n",
+    "pipeline_filename_writer.write(str(number_of_words).encode())\n",
+    "\n",
+    "#g\n",
     "def _sum(arr): \n",
     "    sum=0\n",
     "    for i in arr:\n",
@@ -160,30 +181,12 @@
     "    d['zeroWordsCounter'] = len([number for number in newMatrixArray if number == 0])#number of words that occur 0times in that class\n",
     "    d['percentage'] = (d['zeroWordsCounter']/(len(newMatrixArray)))*100\n",
     "    return d\n",
-    "        \n",
+    "\n",
     "businessWords = numberOfWordsInClass(0,data_matrix)\n",
     "entertainmentWords = numberOfWordsInClass(1,data_matrix)\n",
     "politicsWords = numberOfWordsInClass(2,data_matrix)\n",
     "sportWords = numberOfWordsInClass(3,data_matrix)\n",
     "techWords = numberOfWordsInClass(4,data_matrix)\n",
-    "numberOfWordsInClass(0,data_matrix)\n",
-    "\n",
-    "pipeline_filename_writer.write('\\n(e)\\n'.encode())\n",
-    "pipeline_filename_writer.write('\\nBusiness words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(businessWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nEntertainment words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(entertainmentWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nPolitics words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(politicsWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nSports words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(sportWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nTech words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(techWords['classPercentage']).encode())\n",
-    "\n",
-    "#f vocabular size\n",
-    "number_of_words = len(vectorizer.get_feature_names())\n",
-    "pipeline_filename_writer.write('\\n(f)\\n'.encode())\n",
-    "pipeline_filename_writer.write(str(number_of_words).encode())\n",
     "\n",
     "pipeline_filename_writer.write('\\n(g)\\n'.encode())\n",
     "pipeline_filename_writer.write('\\nBusiness words:'.encode())\n",
@@ -197,7 +200,8 @@
     "pipeline_filename_writer.write('\\nTech words:'.encode())\n",
     "pipeline_filename_writer.write(str(techWords['counter']).encode())\n",
     "    \n",
-    "#h\n",
+    "#h        \n",
+    "\n",
     "totalWords = businessWords['counter'] + entertainmentWords['counter'] + politicsWords['counter'] + sportWords['counter'] + techWords['counter']\n",
     "pipeline_filename_writer.write('\\n(h)\\n'.encode())\n",
     "pipeline_filename_writer.write(str(totalWords).encode())\n",
@@ -260,10 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "38b2599e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "pipeline_filename_writer = open(\"./bbc-performance.txt\",\"ab\")\n",
     "\n",
@@ -286,6 +298,28 @@
     "pipeline_filename_writer.write(str(accuracy).encode())\n",
     "\n",
     "#e\n",
+    "def classPercentage(classIndex):\n",
+    "    return len([number for number in classes if number == classIndex])\n",
+    "\n",
+    "pipeline_filename_writer.write('\\n(e)\\n'.encode())\n",
+    "pipeline_filename_writer.write('\\nBusiness words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(0)).encode())\n",
+    "pipeline_filename_writer.write('\\nEntertainment words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(1)).encode())\n",
+    "pipeline_filename_writer.write('\\nPolitics words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(2)).encode())\n",
+    "pipeline_filename_writer.write('\\nSports words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(3)).encode())\n",
+    "pipeline_filename_writer.write('\\nTech words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(4)).encode())\n",
+    "\n",
+    "#f vocabular size\n",
+    "number_of_words = len(vectorizer.get_feature_names())\n",
+    "pipeline_filename_writer.write('\\n(f)\\n'.encode())\n",
+    "pipeline_filename_writer.write(str(number_of_words).encode())\n",
+    "\n",
+    "\n",
+    "#g\n",
     "def _sum(arr): \n",
     "    sum=0\n",
     "    for i in arr:\n",
@@ -317,24 +351,6 @@
     "politicsWords = numberOfWordsInClass(2,data_matrix)\n",
     "sportWords = numberOfWordsInClass(3,data_matrix)\n",
     "techWords = numberOfWordsInClass(4,data_matrix)\n",
-    "numberOfWordsInClass(0,data_matrix)\n",
-    "\n",
-    "pipeline_filename_writer.write('\\n(e)\\n'.encode())\n",
-    "pipeline_filename_writer.write('\\nBusiness words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(businessWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nEntertainment words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(entertainmentWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nPolitics words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(politicsWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nSports words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(sportWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nTech words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(techWords['classPercentage']).encode())\n",
-    "\n",
-    "#f vocabular size\n",
-    "number_of_words = len(vectorizer.get_feature_names())\n",
-    "pipeline_filename_writer.write('\\n(f)\\n'.encode())\n",
-    "pipeline_filename_writer.write(str(number_of_words).encode())\n",
     "\n",
     "pipeline_filename_writer.write('\\n(g)\\n'.encode())\n",
     "pipeline_filename_writer.write('\\nBusiness words:'.encode())\n",
@@ -405,12 +421,13 @@
     "pipeline_filename_writer.write(str(hockeyIndexCount).encode())\n",
     "pipeline_filename_writer.write('\\nFootball:'.encode())\n",
     "pipeline_filename_writer.write(str(footballIndexCount).encode())\n",
-    "pipeline_filename_writer.close()"
+    "pipeline_filename_writer.close()\n",
+    "print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "9e976bd0",
    "metadata": {},
    "outputs": [
@@ -418,7 +435,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done\n",
       "done\n"
      ]
     }
@@ -442,9 +458,7 @@
     "\n",
     "counts = pd.DataFrame(data_matrix, columns=vectorizer.get_feature_names())\n",
     "\n",
-    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(data_matrix, classes, test_size=0.2, train_size = 0.8,random_state=None)\n",
-    "print('done')\n",
     "naive_bayes = MultinomialNB(alpha=0.0001)\n",
     "naive_bayes.fit(x_train, y_train)\n",
     "\n",
@@ -472,13 +486,34 @@
     "pipeline_filename_writer.write(str(accuracy).encode())\n",
     "\n",
     "#e\n",
+    "def classPercentage(classIndex):\n",
+    "    return len([number for number in classes if number == classIndex])\n",
+    "\n",
+    "pipeline_filename_writer.write('\\n(e)\\n'.encode())\n",
+    "pipeline_filename_writer.write('\\nBusiness words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(0)).encode())\n",
+    "pipeline_filename_writer.write('\\nEntertainment words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(1)).encode())\n",
+    "pipeline_filename_writer.write('\\nPolitics words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(2)).encode())\n",
+    "pipeline_filename_writer.write('\\nSports words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(3)).encode())\n",
+    "pipeline_filename_writer.write('\\nTech words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(4)).encode())\n",
+    "\n",
+    "#f vocabular size\n",
+    "totalItemsSmoothed = len(vectorizer.get_feature_names())+ (len(vectorizer.get_feature_names())*0.0001)\n",
+    "pipeline_filename_writer.write('\\n(f)\\n'.encode())\n",
+    "pipeline_filename_writer.write(str(totalItemsSmoothed).encode())\n",
+    "\n",
+    "#g\n",
     "def _sum(arr): \n",
     "    sum=0\n",
     "    for i in arr:\n",
     "        sum = sum + i \n",
     "    return(sum) \n",
     "\n",
-    "def numberOfWordsInClass(classIndex,data_matrix):\n",
+    "def numberOfWordsInClass(classIndex,data_matrix,totalWithSmoothed):\n",
     "    counter = 0\n",
     "    zeroCounter = 0\n",
     "    newMatrixArray = [0] * len(data_matrix[0])\n",
@@ -493,34 +528,16 @@
     "\n",
     "    d = dict();\n",
     "    d['counter'] = sum(newMatrixArray) #how many words that class has\n",
-    "    d['classPercentage'] = (sum(newMatrixArray)*100)/counter\n",
+    "    d['classPercentage'] = (sum(newMatrixArray)*100)/totalItemsSmoothed\n",
     "    d['zeroWordsCounter'] = len([number for number in newMatrixArray if number == 0])#number of words that occur 0times in that class\n",
-    "    d['percentage'] = (d['zeroWordsCounter']/(len(newMatrixArray)))*100\n",
+    "    d['percentage'] = (d['zeroWordsCounter']/(totalWithSmoothed))*100\n",
     "    return d\n",
-    "        \n",
-    "businessWords = numberOfWordsInClass(0,data_matrix_smoothed_0001)\n",
-    "entertainmentWords = numberOfWordsInClass(1,data_matrix_smoothed_0001)\n",
-    "politicsWords = numberOfWordsInClass(2,data_matrix_smoothed_0001)\n",
-    "sportWords = numberOfWordsInClass(3,data_matrix_smoothed_0001)\n",
-    "techWords = numberOfWordsInClass(4,data_matrix_smoothed_0001)\n",
-    "numberOfWordsInClass(0,data_matrix_smoothed_0001)\n",
     "\n",
-    "pipeline_filename_writer.write('\\n(e)\\n'.encode())\n",
-    "pipeline_filename_writer.write('\\nBusiness words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(businessWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nEntertainment words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(entertainmentWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nPolitics words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(politicsWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nSports words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(sportWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nTech words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(techWords['classPercentage']).encode())\n",
-    "\n",
-    "#f vocabular size\n",
-    "number_of_words = len(vectorizer.get_feature_names())\n",
-    "pipeline_filename_writer.write('\\n(f)\\n'.encode())\n",
-    "pipeline_filename_writer.write(str(number_of_words).encode())\n",
+    "businessWords = numberOfWordsInClass(0,data_matrix_smoothed_0001,totalItemsSmoothed)\n",
+    "entertainmentWords = numberOfWordsInClass(1,data_matrix_smoothed_0001,totalItemsSmoothed)\n",
+    "politicsWords = numberOfWordsInClass(2,data_matrix_smoothed_0001,totalItemsSmoothed)\n",
+    "sportWords = numberOfWordsInClass(3,data_matrix_smoothed_0001,totalItemsSmoothed)\n",
+    "techWords = numberOfWordsInClass(4,data_matrix_smoothed_0001,totalItemsSmoothed)\n",
     "\n",
     "pipeline_filename_writer.write('\\n(g)\\n'.encode())\n",
     "pipeline_filename_writer.write('\\nBusiness words:'.encode())\n",
@@ -534,7 +551,7 @@
     "pipeline_filename_writer.write('\\nTech words:'.encode())\n",
     "pipeline_filename_writer.write(str(techWords['counter']).encode())\n",
     "    \n",
-    "#h\n",
+    "#h      \n",
     "totalWords = businessWords['counter'] + entertainmentWords['counter'] + politicsWords['counter'] + sportWords['counter'] + techWords['counter']\n",
     "pipeline_filename_writer.write('\\n(h)\\n'.encode())\n",
     "pipeline_filename_writer.write(str(totalWords).encode())\n",
@@ -597,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "dec6686f",
    "metadata": {},
    "outputs": [
@@ -606,8 +623,7 @@
      "output_type": "stream",
      "text": [
       "done\n",
-      "0.9775280898876404\n",
-      "0.0\n",
+      "0.9730337078651685\n",
       "done\n"
      ]
     }
@@ -662,13 +678,35 @@
     "print(accuracy)\n",
     "\n",
     "#e\n",
+    "\n",
+    "def classPercentage(classIndex):\n",
+    "    return len([number for number in classes if number == classIndex])\n",
+    "\n",
+    "pipeline_filename_writer.write('\\n(e)\\n'.encode())\n",
+    "pipeline_filename_writer.write('\\nBusiness words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(0)).encode())\n",
+    "pipeline_filename_writer.write('\\nEntertainment words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(1)).encode())\n",
+    "pipeline_filename_writer.write('\\nPolitics words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(2)).encode())\n",
+    "pipeline_filename_writer.write('\\nSports words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(3)).encode())\n",
+    "pipeline_filename_writer.write('\\nTech words percentage:'.encode())\n",
+    "pipeline_filename_writer.write(str(classPercentage(4)).encode())\n",
+    "\n",
+    "#f vocabular size\n",
+    "totalItemsSmoothed = len(vectorizer.get_feature_names())+ (len(vectorizer.get_feature_names())*0.9)\n",
+    "pipeline_filename_writer.write('\\n(f)\\n'.encode())\n",
+    "pipeline_filename_writer.write(str(totalItemsSmoothed).encode())\n",
+    "\n",
+    "#g\n",
     "def _sum(arr): \n",
     "    sum=0\n",
     "    for i in arr:\n",
     "        sum = sum + i \n",
     "    return(sum) \n",
     "\n",
-    "def numberOfWordsInClass(classIndex,data_matrix):\n",
+    "def numberOfWordsInClass(classIndex,data_matrix,totalItemsSmoothed):\n",
     "    counter = 0\n",
     "    zeroCounter = 0\n",
     "    newMatrixArray = [0] * len(data_matrix[0])\n",
@@ -683,36 +721,16 @@
     "\n",
     "    d = dict();\n",
     "    d['counter'] = sum(newMatrixArray) #how many words that class has\n",
-    "    d['classPercentage'] = (sum(newMatrixArray)*100)/counter\n",
+    "    d['classPercentage'] = (sum(newMatrixArray)*100)/totalItemsSmoothed\n",
     "    d['zeroWordsCounter'] = len([number for number in newMatrixArray if number == 0])#number of words that occur 0times in that class\n",
-    "    d['percentage'] = (d['zeroWordsCounter']/(len(newMatrixArray)))*100\n",
+    "    d['percentage'] = (d['zeroWordsCounter']/(totalItemsSmoothed))*100\n",
     "    return d\n",
     "        \n",
-    "businessWords = numberOfWordsInClass(0,data_matrix_smoothed_9)\n",
-    "entertainmentWords = numberOfWordsInClass(1,data_matrix_smoothed_9)\n",
-    "politicsWords = numberOfWordsInClass(2,data_matrix_smoothed_9)\n",
-    "sportWords = numberOfWordsInClass(3,data_matrix_smoothed_9)\n",
-    "techWords = numberOfWordsInClass(4,data_matrix_smoothed_9)\n",
-    "numberOfWordsInClass(0,data_matrix_smoothed_0001)\n",
-    "\n",
-    "pipeline_filename_writer.write('\\n(e)\\n'.encode())\n",
-    "pipeline_filename_writer.write('\\nBusiness words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(businessWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nEntertainment words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(entertainmentWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nPolitics words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(politicsWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nSports words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(sportWords['classPercentage']).encode())\n",
-    "pipeline_filename_writer.write('\\nTech words percentage:'.encode())\n",
-    "pipeline_filename_writer.write(str(techWords['classPercentage']).encode())\n",
-    "\n",
-    "#f vocabular size\n",
-    "number_of_words = len(vectorizer.get_feature_names())\n",
-    "pipeline_filename_writer.write('\\n(f)\\n'.encode())\n",
-    "pipeline_filename_writer.write(str(number_of_words).encode())\n",
-    "\n",
-    "print(businessWords['percentage'])\n",
+    "businessWords = numberOfWordsInClass(0,data_matrix_smoothed_9,totalItemsSmoothed)\n",
+    "entertainmentWords = numberOfWordsInClass(1,data_matrix_smoothed_9,totalItemsSmoothed)\n",
+    "politicsWords = numberOfWordsInClass(2,data_matrix_smoothed_9,totalItemsSmoothed)\n",
+    "sportWords = numberOfWordsInClass(3,data_matrix_smoothed_9,totalItemsSmoothed)\n",
+    "techWords = numberOfWordsInClass(4,data_matrix_smoothed_9,totalItemsSmoothed)\n",
     "\n",
     "pipeline_filename_writer.write('\\n(g)\\n'.encode())\n",
     "pipeline_filename_writer.write('\\nBusiness words:'.encode())\n",
@@ -765,8 +783,7 @@
     "def numberOfSpecificWord(wordIndex,data_matrix):\n",
     "    counter = 0\n",
     "    for arr in data_matrix:\n",
-    "        counter = counter + arr[wordIndex]\n",
-    "            \n",
+    "        counter = counter + arr[wordIndex]      \n",
     "    return counter\n",
     "\n",
     "hockeyIndex = vectorizer.get_feature_names().index('hockey')\n",
@@ -789,13 +806,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4eaf19c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline_filename_writer = open(\"./bbc-discussion.txt\",\"wb\")\n",
-    "pipeline_filename_writer.write('The performance of steps 8 - 10 are better in terms of accuracy due to the fact that we are adding smothing. Smoothing is extrmeely necessary in this context due to the fact that most documents ahve a count of zero'.encode())"
+    "pipeline_filename_writer.write('The performance of steps 8 - 10 are better in terms of accuracy due to the fact that we are adding smothing. Smoothing is extrmeely necessary in this context due to the fact that most documents ahve a count of zero'.encode())\n",
+    "pipeline_filename_writer.close()"
    ]
   }
  ],
